objects/fcio1__RoutingQueues__c.object
<CustomObject>
    <fields>
        <fullName>fcio1__Account_Field_for_Role_Tag__c</fullName>
        <label>Account Field for Role Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Additional_Notification_Text__c</fullName>
        <label>Additional Notification Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fcio1__Create_Account_if_no_match_exist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Account if no match exist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fcio1__Current_Participant__c</fullName>
        <label>Current Participant Weightage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__DefaultUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Routing_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fcio1__Default_Queue__c</fullName>
        <inlineHelpText>Mention Default Queue Id. Applicable only for Lead and Case Object.</inlineHelpText>
        <label>Default Queue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Dupe_Span_Days__c</fullName>
        <defaultValue>30</defaultValue>
        <label>Look For Dupes in Last (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fcio1__Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fcio1__Field_for_matching_criteria__c</fullName>
        <label>Field for matching criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Field_to_Tag__c</fullName>
        <label>Field to Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Index__c</fullName>
        <defaultValue>-1</defaultValue>
        <label>Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fcio1__Lead_AutoConvert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead AutoConvert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fcio1__Limit__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Capacity Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fcio1__Matching_value__c</fullName>
        <label>Matching value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Minimum_Score_To_Merge__c</fullName>
        <defaultValue>100</defaultValue>
        <inlineHelpText>Integer (0-100),  If criteria not fulfilled, then Route instead of Merge to that exact match record.
Default Value = 100</inlineHelpText>
        <label>Minimum Score To Merge (For Exact Match)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fcio1__NotificationUsers__c</fullName>
        <description>comma seperated user ids for chatter notification</description>
        <label>Additional users to be notified</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Object_for_matching_criteria__c</fullName>
        <label>Object for matching criteria</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fcio1__Operator__c</fullName>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>fcio1__Operator</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>fcio1__P1_Exact_Match__c</fullName>
        <inlineHelpText>Applicable for Leads, Accounts and Contacts objects.</inlineHelpText>
        <label>P1 - Exact Match</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>fcio1__Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Route</fullName>
                </value>
                <value>
                    <fullName>Merge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fcio1__P2_Contacts_Match_Leads__c</fullName>
        <inlineHelpText>Contact&apos;s Account Name field is must for Lead-To-Contact Merge. If Account field is missing, then record may Route.</inlineHelpText>
        <label>P2 - Contacts Match Leads</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>fcio1__Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Route</fullName>
                </value>
                <value>
                    <fullName>Merge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fcio1__P3_Domain_based_Match__c</fullName>
        <label>P3 - Domain based Match</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>fcio1__Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Route</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fcio1__Route_By_Team_Role__c</fullName>
        <label>Route By Team Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Team Role</fullName>
                </value>
                <value>
                    <fullName>Parent Account Team Role</fullName>
                </value>
                <value>
                    <fullName>Ultimate Account Team Role</fullName>
                </value>
                <value>
                    <fullName>Account Owner</fullName>
                </value>
                <value>
                    <fullName>Field Based Routing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fcio1__Route_Duplicates_To_Same_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Whether To Check For Duplicates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fcio1__Routing_Team_Role__c</fullName>
        <label>Routing Team Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Skill_Index_and_Weight_Properties__c</fullName>
        <label>Skill Index and Weight Properties</label>
        <length>131071</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fcio1__Skills__c</fullName>
        <label>Skills</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Skip_If_No_Skills_Match__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip If No Skills Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fcio1__Tag_Value__c</fullName>
        <label>Tag Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Tags__c</fullName>
        <label>Tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Territory_Based_Routing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Territory Based Routing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fcio1__Territory_External__c</fullName>
        <externalId>true</externalId>
        <label>Territory External</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <referenceTo>fcio1__GTM__c</referenceTo>
        <relationshipName>Routing_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fcio1__TotalCount__c</fullName>
        <label>Total Count</label>
        <summarizedField>fcio1__QueueParticipant__c.fcio1__Total_Count__c</summarizedField>
        <summaryForeignKey>fcio1__QueueParticipant__c.fcio1__Routing_Queues__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>fcio1__Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Engagement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fcio1__Update_Account_Teams__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Account Teams</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fcio1__Update_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Don&apos;t Update Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fcio1__Update_Role__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Role</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fcio1__UseAgentLogin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Agent Login</label>
        <type>Checkbox</type>
    </fields>
    <label>Fullcast Routing Queues</label>
    <listViews>
        <fullName>fcio1__All</fullName>
        <columns>NAME</columns>
        <columns>fcio1__Type__c</columns>
        <columns>fcio1__Enabled__c</columns>
        <columns>fcio1__Tags__c</columns>
        <columns>fcio1__Territory__c</columns>
        <columns>fcio1__P1_Exact_Match__c</columns>
        <columns>fcio1__P2_Contacts_Match_Leads__c</columns>
        <columns>fcio1__P3_Domain_based_Match__c</columns>
        <columns>fcio1__Dupe_Span_Days__c</columns>
        <columns>fcio1__Route_By_Team_Role__c</columns>
        <columns>fcio1__DefaultUser__c</columns>
        <columns>fcio1__Default_Queue__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>fcio1__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Queue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fullcast Routing Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>fcio1__Default_Queue_Validity</fullName>
        <active>false</active>
        <errorConditionFormula>AND(NOT(OR( TEXT(fcio1__Type__c) = &quot;Leads&quot;,  TEXT(fcio1__Type__c) = &quot;Cases&quot;)), NOT(ISBLANK( fcio1__Default_Queue__c )))</errorConditionFormula>
        <errorMessage>Queues are only valid for Lead and Cases Queue types. Please use a Default User instead or change the type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>fcio1__Only_Default_Queue_or_User_can_be_filled</fullName>
        <active>true</active>
        <description>Only Default Queue or Default User can be filled in</description>
        <errorConditionFormula>AND(NOT(ISBLANK( fcio1__DefaultUser__c )), NOT(ISBLANK( fcio1__Default_Queue__c )))</errorConditionFormula>
        <errorMessage>Only one of either the Default User or Default Queue can be used. Please remove the value in one of these fields.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>fcio1__Territory_and_Tag_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>OR( 

AND((ISBLANK(fcio1__Territory__c)), 
(ISBLANK(fcio1__Tags__c))
)
)</errorConditionFormula>
        <errorMessage>At least Territory or Tags field needs to have a value.</errorMessage>
    </validationRules>
</CustomObject>